# aether

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  install.sh  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/: LAUNCHER.md
apps/cli/: pyproject.toml
apps/cli/src/aether_sync/: __init__.py  __main__.py  client.py  protocol.py
apps/cli/tests/: test_protocol.py
apps/core/: pyproject.toml
apps/core/src/aether_core/: __init__.py  __main__.py
apps/core/src/aether_core/application/: __init__.py  auth.py  backups.py  browse.py  catalog.py  config.py  config_raw.py  content.py  events.py  files.py  icons.py  images.py  install.py  instances.py  metrics.py  players.py  ports.py  ports_config.py  power.py  removal.py  scheduler.py  sources.py  sync.py  tasks.py  trash.py  updates.py
apps/core/src/aether_core/domain/: __init__.py  backups.py  content.py  errors.py  instances.py  tasks.py  trash.py  users.py
apps/core/src/aether_core/infrastructure/: __init__.py  containers.py  db.py  filesystem.py  http_client.py  plugins.py  processes.py  registry.py  repositories.py  security.py  settings.py  steam_store.py
apps/core/src/aether_core/infrastructure/migrations/: env.py
apps/core/src/aether_core/infrastructure/migrations/versions/: 0001_initial.py  0002_provider_data.py  0003_users_audit.py  0004_sync_profiles.py  0005_backups.py  0006_scheduled_tasks.py  0007_user_profile.py  0008_instance_runtime.py  0008_trash.py  0009_trash.py  0010_provider_versions.py
apps/core/src/aether_core/interfaces/: __init__.py  http.py
apps/core/src/aether_core/interfaces/http/: __init__.py  deps.py  errors.py  schemas.py  ws.py
apps/core/src/aether_core/interfaces/http/routes/: auth.py  backups.py  browse.py  catalog.py  config.py  content.py  files.py  game_version.py  images.py  install.py  instance_ports.py  instances.py  meta.py  metrics.py  players.py  power.py  public.py  sources.py  sync.py  system.py  tasks.py  trash.py  users.py
apps/core/tests/: conftest.py  test_api.py  test_auth_api.py  test_backup_collect.py  test_backup_domain.py  test_backup_scheduler.py  test_backups_api.py  test_browse_api.py  test_catalog.py  test_config_api.py  test_config_raw_api.py  test_containers.py  test_content_api.py  test_files_api.py  test_game_version_api.py  test_icon_api.py  test_install_service.py  test_instances_api.py  test_metrics_api.py  test_players.py  test_ports_config.py  test_power_api.py  test_provision_api.py  test_removal.py  test_sources.py  test_static_serving.py  test_sync_api.py  test_tasks_api.py  test_tasks_domain.py  test_trash.py  test_updates.py  test_upload_api.py
apps/core/tests/fixtures/: steam_appdetails_251570.json
apps/dashboard/: index.html  package.json  vite.config.ts
apps/dashboard/src/: App.tsx  index.css  main.tsx
apps/dashboard/src/components/: BarChart.tsx  Dialog.tsx  UploadButton.tsx  ui.tsx
apps/dashboard/src/lib/: api.ts  charts.ts  icons.ts  monaco.ts  providers.ts  themes.ts  ws.ts  xml.ts
apps/dashboard/src/modules/admin/: AdminViews.tsx  ProfileCards.tsx
docs/: 01-analise-projeto-atual.md  02-arquitetura.md  03-stack.md  04-dados-e-api.md  05-engenharia.md  06-roadmap.md
providers/humanitz/: pyproject.toml
providers/humanitz/src/aether_provider_humanitz/: __init__.py  catalog.py  provider.py
providers/humanitz/src/aether_provider_humanitz/assets/: README.md
providers/humanitz/src/aether_provider_humanitz/server/: backup.py  console.py  container.py  install.py  serversettings.py
providers/humanitz/tests/: test_humanitz.py
providers/humanitz/tests/fixtures/: REF_GameServerSettings.ini
providers/minecraft/: pyproject.toml
providers/minecraft/src/aether_provider_minecraft/: __init__.py  catalog.py  provider.py
providers/minecraft/src/aether_provider_minecraft/content/: __init__.py  jar_analyzer.py  modrinth.py
providers/minecraft/src/aether_provider_minecraft/server/: __init__.py  backup.py  console.py  container.py  game_meta.py  launch.py  players.py  properties.py  versions.py
providers/minecraft/tests/: test_catalog_context.py  test_contract.py  test_game_meta.py  test_jar_analyzer.py  test_modrinth.py  test_server_launch.py  test_versions.py
providers/satisfactory/: pyproject.toml
providers/satisfactory/src/aether_provider_satisfactory/: __init__.py  catalog.py  provider.py
providers/satisfactory/src/aether_provider_satisfactory/server/: backup.py  console.py  container.py  install.py
providers/satisfactory/tests/: test_satisfactory.py
providers/sevendays/: pyproject.toml
providers/sevendays/src/aether_provider_sevendays/: __init__.py  catalog.py  provider.py
providers/sevendays/src/aether_provider_sevendays/content/: modinfo_analyzer.py
providers/sevendays/src/aether_provider_sevendays/server/: backup.py  console.py  container.py  install.py  serverconfig.py
providers/sevendays/tests/: test_console.py  test_container.py  test_install.py  test_modinfo_analyzer.py  test_serverconfig_codec.py  test_sevendays_contract.py
providers/sevendays/tests/fixtures/: app_info_branches.txt  serverconfig-3.0.1.xml
(+36 files in other folders)
