[project]
name = "aether-sync"
version = "0.1.0.dev0"
description = "Aether sync client — mirrors a published server profile into a local game directory"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "cryptography>=43.0",
]

[project.scripts]
aether-sync = "aether_sync.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aether_sync"]
