[project]
name = "aether-core"
version = "0.1.0.dev0"
description = "Aether Platform Core — API, orchestration and plugin host"
requires-python = ">=3.11"
dependencies = [
    "aether-sdk",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[dependency-groups]
dev = [
    "aether-provider-minecraft",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aether_core"]

[tool.uv.sources]
aether-sdk = { workspace = true }
aether-provider-minecraft = { workspace = true }
