[project]
name = "aether-core"
version = "0.1.0.dev0"
description = "Aether Platform Core — API, orchestration and plugin host"
requires-python = ">=3.11"
dependencies = [
    "aether-sdk",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic-settings>=2.5",
    "platformdirs>=4.0",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "cryptography>=43.0",
]

[dependency-groups]
dev = [
    "aether-provider-minecraft",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aether_core"]

[tool.uv.sources]
aether-sdk = { workspace = true }
aether-provider-minecraft = { workspace = true }
