[project]
name = "aether-core"
version = "0.1.0.dev0"
description = "Aether Platform Core — API, orchestration and plugin host"
requires-python = ">=3.11"
dependencies = [
    "aether-sdk",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # [asyncio] garante o greenlet também no macOS arm64, onde o marker
    # padrão do SQLAlchemy não o instala e todo caminho async de DB quebra.
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic-settings>=2.5",
    "platformdirs>=4.0",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "cryptography>=43.0",
    "python-multipart>=0.0.9",
    "psutil>=6.0",
    "aiodocker>=0.24",
]

[dependency-groups]
dev = [
    "aether-provider-minecraft",
    "aether-provider-sevendays",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aether_core"]

[tool.uv.sources]
aether-sdk = { workspace = true }
aether-provider-minecraft = { workspace = true }
aether-provider-sevendays = { workspace = true }
