[project]
name = "aether-provider-humanitz"
version = "0.1.0.dev0"
description = "HumanitZ provider for the Aether Platform"
requires-python = ">=3.11"
dependencies = [
    "aether-sdk",
]

[project.entry-points."aether.providers"]
humanitz = "aether_provider_humanitz:provider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aether_provider_humanitz"]

[tool.uv.sources]
aether-sdk = { workspace = true }
