[project]
name = "aether-provider-minecraft"
version = "0.1.0.dev0"
description = "Minecraft provider for the Aether Platform"
requires-python = ">=3.11"
dependencies = [
    "aether-sdk",
]

[project.entry-points."aether.providers"]
minecraft = "aether_provider_minecraft:provider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aether_provider_minecraft"]

[tool.uv.sources]
aether-sdk = { workspace = true }
