[project]
name = "aether-provider-satisfactory"
version = "0.1.0.dev0"
description = "Satisfactory provider for the Aether Platform"
requires-python = ">=3.11"
dependencies = [
    "aether-sdk",
]

[project.entry-points."aether.providers"]
satisfactory = "aether_provider_satisfactory:provider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aether_provider_satisfactory"]

[tool.uv.sources]
aether-sdk = { workspace = true }
