[project]
name = "aether-provider-sevendays"
version = "0.1.0.dev0"
description = "7 Days to Die provider for the Aether Platform"
requires-python = ">=3.11"
dependencies = [
    "aether-sdk",
]

[project.entry-points."aether.providers"]
sevendays = "aether_provider_sevendays:provider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aether_provider_sevendays"]

[tool.uv.sources]
aether-sdk = { workspace = true }
